--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+openCVLibrary346/
+
 # Built application files
 *.apk
 *.ap_
@@ -14,7 +16,7 @@ gen/
 out/
 
 # Gradle files
-.gradle/
+gradle/
 build/
 
 # Local configuration file (sdk path, etc)
